@@ -1,3 +1,8 @@
+2003-03-01  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* interp.c (sim_fetch_register): Only store a single byte for
+	1 byte registers.
+
 2003-02-27  Andrew Cagney  <cagney@redhat.com>
 
 	* interp.c (sim_prepare_for_program, sim_open)
